# chess

./: .gitignore  Cargo.toml  README.md  win.sh
.cargo/: config.toml
app/: Cargo.toml
app/src/: graphics.rs  main.rs
app/src/ui/: board.rs  piece.rs
documentation/: design.md
engine/: Cargo.toml
engine/benches/: engine_benchmark.rs
engine/src/: bitboard.rs  bits.rs  board.rs  castle.rs  errors.rs  generator.rs  init.rs  lib.rs  parser.rs  piece.rs
src/: bitboard.rs  board.rs  lib.rs  main.rs  piece.rs
