[workspace]
resolver = "2"

members = [
  "app",
  "engine",
]
default-members = [
  "engine",
]

[profile.release]
lto = "thin"

[profile.opt]
inherits = "release"
lto = "fat"
opt-level = 3

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
