[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chess"
path = "src/main.rs"

[dependencies]
# Local crates
engine = { path = "../engine" }

# Cross-compilation dependencies for bevy using MSVC
blake3 = { version = "1.5", features = [ "pure" ] }

# External crates
bevy = { version = "0.13" }
rand = "0.8.5"
